<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="9" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="50dip"
            android:layout_marginRight="50dip"
            android:layout_weight="4"
            android:adjustViewBounds="true"
            android:src="@drawable/gomokuicon512" />

        <Button
            android:id="@+id/start_game"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_weight="1"
            android:text="@string/start_game" />

        <Button
            android:id="@+id/preferences"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_weight="1"
            android:text="@string/options" />

        <Button
            android:id="@+id/about"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_weight="1"
            android:text="@string/about" />

        <Button
            android:id="@+id/quit"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_weight="1"
            android:text="@string/quit" />

        <com.google.ads.AdView
            xmlns:googleads="http://schemas.android.com/apk/lib/com.google.ads"
            android:id="@+id/ad"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            googleads:adSize="BANNER"
            googleads:adUnitId="@string/admob_publisher_id" />
    </LinearLayout>

</ScrollView>